test/spec_vectors/br_on_cast_fail/fail/module_7.wat
(module (func (result anyref) (br_on_cast_fail 0 structref arrayref (unreachable))))